Refactor LaTeX documents for improved clarity and organization. Comment out unused sections in main.tex, update variable names in ubetinget.tex, and add visualizations for SVM in hard-svm.tex and soft-svm.tex.

--- a/main.tex
+++ b/main.tex
@@ -9,12 +9,12 @@
 \addbibresource{preamble/bib/references.bib}
 
 \includeonly{
-    preamble/frontmatter/titlepage,
-    parts/introduksjon,
-    parts/ubetinget,
+    % preamble/frontmatter/titlepage,
+    % parts/introduksjon,
+    % parts/ubetinget,
     parts/konveks,
-    parts/betinget,
-    appendices/F_functions,
+    % parts/betinget,
+    % appendices/F_functions,
 }
 
 \begin{document}
@@ -25,11 +25,10 @@
 \include{parts/ubetinget}
 \include{parts/konveks}
 \include{parts/betinget}
-
 \include{appendices/F_functions}
 
 \printbibliography
-\printglossary
-\printglossary[type=\acronymtype]
+% \printglossary
+% \printglossary[type=\acronymtype]
 
 \end{document}
